# flow-package-maths

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .releaserc.yaml  .releasers.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: gitflow.yaml  master.yml  pull-request.yaml  push.yaml  release.yaml
flow-py-library-general_maths/divide/: test_divide.py
flow-py-library-general_maths/e_ln/: test_e_ln.py
flow-py-library-general_maths/e_log_n/: test_e_log_n.py
flow-py-library-general_maths/trig_acos/: flow_trig_acos.py
flow-py-library-general_maths/trig_asin/: test_trig_asin.py
flow-py-library-general_maths/trig_cos/: flow_trig_cos.py
flow-py-library-general_maths/trig_tan/: flow_trig_tan.py
flow_package_maths/: flow-package.toml
flow_package_maths/advanced/factorial/: README.md  factorial.py  flow-component.toml
flow_package_maths/advanced/log/: README.md  flow-component.toml  log.py
flow_package_maths/advanced/log_base/: flow-component.toml  log_base.py
flow_package_maths/advanced/max/: README.md  flow-component.toml  max.py
flow_package_maths/advanced/min/: README.md  flow-component.toml  min.py
flow_package_maths/advanced/power/: README.md  flow-component.toml  power.py
flow_package_maths/advanced/root/: README.md  flow-component.toml  root.py
flow_package_maths/advanced/trigonometry/: constants.py
flow_py_library_general_maths/add/: flow_add.py  test_add.py
flow_py_library_general_maths/divide/: flow_divide.py  test_divide.py
flow_py_library_general_maths/e_ln/: flow_e_ln.py  test_e_ln.py
flow_py_library_general_maths/e_log_n/: flow_e_log_n.py  test_e_log_n.py
flow_py_library_general_maths/exp_e/: flow_exp_e.py  test_exp_e.py
flow_py_library_general_maths/exp_n/: flow_exp_n.py  test_exp_n.py
flow_py_library_general_maths/multiply/: flow_multiply.py  test_multiply.py
flow_py_library_general_maths/subtract/: flow_subtract.py  test_subtract.py
flow_py_library_general_maths/trig_acos/: flow_trig_acos.py  test_trig_acos.py
flow_py_library_general_maths/trig_asin/: flow_trig_asin.py  test_trig_asin.py
flow_py_library_general_maths/trig_atan/: flow_trig_atan.py  test_trig_atan.py
flow_py_library_general_maths/trig_cos/: flow_trig_cos.py  test_trig_cos.py
flow_py_library_general_maths/trig_sin/: flow_trig_sin.py  test_trig_sin.py
flow_py_library_general_maths/trig_tan/: flow_trig_tan.py  test_trig_tan.py
flow_py_library_general_maths/util/: utils_tests.py
pycomponents_general_maths/add/: add.py  flow_add.py  test_add.py
pycomponents_general_maths/divide/: __init__.py  divide.py  flow_divide.py  test_divide.py
pycomponents_general_maths/e_ln/: __init__.py  e_ln.py  flow_e_ln.py  test_e_ln.py
pycomponents_general_maths/e_log_n/: __init__.py  e_log_n.py  flow_e_log_n.py  test_e_log_n.py
pycomponents_general_maths/exp_e/: __init__.py  exp_e.py  flow_exp_e.py  test_exp_e.py
pycomponents_general_maths/exp_n/: __init__.py  exp_n.py  flow_exp_n.py  test_exp_n.py
pycomponents_general_maths/mass_sum/: __init__.py  flow_mass_sum.py  test_mass_sum.py
pycomponents_general_maths/multiply/: __init__.py  flow_multiply.py  multiply.py  test_multiply.py
pycomponents_general_maths/subtract/: __init__.py  flow_subtract.py  test_subtract.py
pycomponents_general_maths/trig_acos/: __init__.py  flow_trig_acos.py  test_trig_acos.py  trig_acos.py
pycomponents_general_maths/trig_asin/: __init__.py  flow_trig_asin.py  test_trig_asin.py
pycomponents_general_maths/trig_atan/: __init__.py  flow_trig_atan.py  test_trig_atan.py  trig_atan.py
pycomponents_general_maths/trig_cos/: __init__.py  flow_trig_cos.py  test_trig_cos.py  trig_cos.py
pycomponents_general_maths/trig_sin/: __init__.py  flow_trig_sin.py  test_trig_sin.py  trig_sin.py
pycomponents_general_maths/trig_tan/: __init__.py  flow_trig_tan.py  test_trig_tan.py
pycomponents_general_maths/util/: utils_tests.py
tests/advanced/: test_e_ln.py  test_e_log_n.py  test_exp_e.py  test_exp_n.py  test_factorial.py  test_ln.py  test_log.py  test_log_base.py  test_max.py  test_max_min.py  test_min.py  test_power.py  test_root.py  test_round.py  test_trig_acos.py  test_trig_asin.py  test_trig_atan.py  test_trig_cos.py  test_trig_sin.py  test_trig_tan.py  test_trigonometry.py
tests/arithmetic/: old_test_absolute.py  old_test_multiply.py  test_absolute.py  test_add.py  test_decrement.py  test_divide.py  test_increment.py  test_multiply.py  test_negative.py  test_subtract.py  test_sum.py
tests/arrays/: test_average.py  test_item_by_coord_index.py  test_join_two_arrays.py  test_linspace.py  test_make_number_collection.py  test_median.py  test_multi_connection_to_int_list.py  test_multi_connection_to_list.py  test_multi_connection_to_number_array.py  test_number_at_coordinate_index.py  test_range.py  test_reshape_array.py  test_sum.py
tests/general_maths/: test_add.py  test_divide.py  test_e_ln.py  test_e_log_n.py  test_exp_e.py  test_exp_n.py  test_multiply.py  test_subtract.py  test_trig_acos.py  test_trig_asin.py  test_trig_atan.py  test_trig_cos.py  test_trig_sin.py  test_trig_tan.py
tests/statistics/: old_test_average.py  old_test_range.py  test_average.py  test_median.py  test_range.py
(+182 files in other folders)
