[tool.poetry]
name = "flow-package-maths"
description = "A Package of Python Flow Components"
authors = ["Eu Chian Tan <euchian@theengineeringcompany.com>", "Matthew Stedman <matt@theengineeringcompany.com>", "Neil Cameron <neil@theengineeringcompany.com>"]
version = "2.0.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/theengineeringco/flow-package-maths.git"

[tool.poetry.dependencies]
python = "^3.8"
flow-py = { version = "^2", allow-prereleases = true }
numpy = "^1.19"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14"                    # Linting
mypy = "^0.780"                                       # Linting
black = "^20.8b1"                                     # Formatting
isort = { version = "^4.3", extras = ["pyproject"] }  # Formatting
pytest = "^6.0"                                       # Runnning Tests
tox = "^3.20"                                         # Tox Testing

flow-py = {version = "^2.0", extras = ["testing"]}      # For Component Testing

# Pre-commit - helps enforce code style. Use `pre-commit install` to install
pre-commit = "^2.7"

[[tool.poetry.source]]
name = "tec-pypi"
url = "https://pypi.theengineering.company"

[tool.poetry.plugins.flow_package]
"maths" = "flow_package_maths"

[tool.nitpick]
style = "https://raw.githubusercontent.com/theengineeringco/python-styleguide/master/TEC-style.toml"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
line_length = 120
multi_line_output = 3
indent = 4
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.unimport]
include = '^flow_package_maths|^tests'
exclude = '(__init__.py)'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
