[tool.poetry]
name        = "flow-package-maths"
description = "A Package of Python Flow Components"
authors     = [
  "Arran Hobson Sayers <arran@theengineeringcompany.com>",
  "Eu Chian Tan <euchian@theengineeringcompany.com>",
  "Matthew Stedman <matt@theengineeringcompany.com>",
  "Neil Cameron <neil@theengineeringcompany.com>",
]
version = "2.1.3"
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/theengineeringco/flow-package-maths.git"

[tool.poetry.dependencies]
python  = "^3.8"
flow-py = "^2"
numpy   = "^1.18"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15"   # Linting
mypy                     = "^0.780"  # Linting
black                    = "^20.8b1" # Formatting
pytest                   = "^6.0"    # Tests
tox                      = "^3.20"   # Tests
pre-commit               = "^2.10"   # Code Style

# For Component Testing
flow-py = { version = "^2", extras = ["testing"] }

[[tool.poetry.source]]
name = "tec-pypi"
url  = "https://pypi.theengineering.company"

[tool.poetry.plugins.flow_package]
"maths" = "flow_package_maths"

[tool.nitpick]
style = "https://raw.githubusercontent.com/theengineeringco/python-styleguide/master/TEC-style.toml"

[tool.pytest.ini_options]
minversion     = "6.0"
testpaths      = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length    = 120
target-version = ["py38"]

[tool.isort]
line_length = 120
profile     = "black"

[tool.unimport]
include = '^flow_package_maths|^tests'
exclude = '(__init__.py)'

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
